--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<li><a href="https://twitter.com/AlexanderHotham" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.facebook.com/alexander.hotham?fref=ts" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="http://instagram.com/ahoth96" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://github.com/Ahoth96" class="icon fa-github"><span class="label">Github</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Alex Hotham &bull; 2015</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
